# study_q_object

./: A.h  Add main  B.cpp  B.h  C.h  CMakeLists.txt
